--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="">
 
     <title>Oak Leaf Susu Enterprise - </title>
+      <link rel="icon" href="images/favicon.ico" type="image/png">  
 
     <!-- CSS FILES -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -16,13 +17,7 @@
     <link href="css/bootstrap-icons.css" rel="stylesheet">
 
     <link href="css/templatemo-kind-heart-charity.css" rel="stylesheet">
-    <!--
 
-TemplateMo 581 Kind Heart Charity
-
-https://templatemo.com/tm-581-kind-heart-charity
-
--->
 
 </head>
 
@@ -963,23 +958,18 @@ https://templatemo.com/tm-581-kind-heart-charity
     <footer class="site-footer">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-12 mb-4">
+                <!-- <div class="col-lg-3 col-12 mb-4">
                     <img src="images/logo.png" class="logo img-fluid" alt="">
-                </div>
+                </div> -->
 
                 <div class="col-lg-4 col-md-6 col-12 mb-4">
                     <h5 class="site-footer-title mb-3">Quick Links</h5>
 
                     <ul class="footer-menu">
-                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">Our Story</a></li>
-
-                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">Newsroom</a></li>
-
-                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">Causes</a></li>
-
+                       
                         <li class="footer-menu-item"><a href="#" class="footer-menu-link">Become a part of us</a></li>
 
-                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">Partner with us</a></li>
+                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">Save with us</a></li>
                     </ul>
                 </div>
 
