added phone numbers

--- a/index.html
+++ b/index.html
@@ -907,6 +907,13 @@
                                         +233 53 539 2394
                                     </a>
                                 </p>
+                                <p class="d-flex mb-2">
+                                    <i class="bi-telephone me-2"></i>
+
+                                    <a href="tel: 305-240-9671">
+                                        +233 570159221
+                                    </a>
+                                </p>
 
                                 <p class="d-flex">
                                     <i class="bi-envelope me-2"></i>
@@ -981,6 +988,13 @@
 
                         <a href="tel: 305-240-9671" class="site-footer-link">
                             +233 53 539 2394
+                        </a>
+                    </p>
+                    <p class="text-white d-flex mb-2">
+                        <i class="bi-telephone me-2"></i>
+
+                        <a href="tel: 305-240-9671" class="site-footer-link">
+                            +233 570159221
                         </a>
                     </p>
 
