--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Oak Leaf SuSu Enterprise helps you save, grow and reach your financial goals. Join our daily and weekly susu programs and start your journey today.">
+    <meta name="keywords" content="Oak Leaf, susu, savings, Accra, Ghana, business loans, daily savings, weekly savings, financial freedom">
+    <meta name="author" content="Oak Leaf SuSu Enterprise">
 
-    <meta name="description" content="">
-    <meta name="author" content="">
 
-    <title>Oak Leaf Susu Enterprise - </title>
+    <title>Oak Leaf SuSu Enterprise | Save Daily and Grow Financially</title>
+
       <link rel="icon" href="images/favicon.ico" type="image/png">  
 
     <!-- CSS FILES -->
@@ -80,7 +82,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#section_2">About</a>
+                        <a class="nav-link click-scroll" href="#about_section">About</a>
                     </li>
 
                     <!-- <li class="nav-item">
@@ -104,7 +106,7 @@
                     </li> -->
 
                     <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#about_section">Contact</a>
+                        <a class="nav-link click-scroll" href="#contact_section">Contact</a>
                     </li>
 
                     <!-- <li class="nav-item ms-3">
@@ -874,7 +876,7 @@
         </section> -->
 
 
-        <section class="contact-section section-padding" id="section_6">
+        <section class="contact-section section-padding" id="contact_section">
             <div class="container">
                 <div class="row">
 
