--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
                     <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
                         <div class="featured-block d-flex justify-content-center align-items-center">
-                            <a href="donate.html" class="d-block">
+                            <a href="" class="d-block">
                                 <img src="images/icons/loan.png" class="featured-block-image" alt="" style="height: 50%; width: 50%;">
 
                                 <p class="featured-block-text">Save to pay Bills</p>
@@ -199,7 +199,7 @@
 
                     <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0 mb-md-4">
                         <div class="featured-block d-flex justify-content-center align-items-center">
-                            <a href="donate.html" class="d-block">
+                            <a href="" class="d-block">
                                 <img src="images/icons/jar.png" class="featured-block-image " alt="" style="height: 50%; width: 50%;">
 
                                 <p class="featured-block-text">Savings</p>
@@ -209,7 +209,7 @@
 
                     <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0 mb-md-4">
                         <div class="featured-block d-flex justify-content-center align-items-center">
-                            <a href="donate.html" class="d-block">
+                            <a href="" class="d-block">
                                 <img src="images/icons/bulletin-board.png" class="featured-block-image " alt="" style="height: 50%; width: 50%;">
 
                                 <p class="featured-block-text">Daily/Weekly Susu</p>
@@ -219,7 +219,7 @@
 
                     <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
                         <div class="featured-block d-flex justify-content-center align-items-center">
-                            <a href="donate.html" class="d-block">
+                            <a href="" class="d-block">
                                 <img src="images/icons/market.png" class="featured-block-image " alt="" style="height: 50%; width: 50%;">
 
                                 <p class="featured-block-text">Save for a Business</p>
