--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                 </div>
 
                                 <div class="carousel-item">
-                                    <img src="images/woman2.jpg"
+                                    <img src="images/savingpic.jpg"
                                         class="carousel-image img-fluid" alt="...">
 
                                     <div class="carousel-caption d-flex flex-column justify-content-end">
@@ -149,7 +149,7 @@
                                 </div>
 
                                 <div class="carousel-item">
-                                    <img src="images/marketwoman1.jpg"
+                                    <img src="images/Coins.jpg"
                                         class="carousel-image img-fluid" alt="...">
 
                                     <div class="carousel-caption d-flex flex-column justify-content-end">
